text changes and bug fix

--- a/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-applied-candidate/employer-applied-candidate.component.html
@@ -24,7 +24,7 @@
               <th scope="col">{{"tabs.mobile" | translate}}</th>
               <th scope="col">{{"shared.email" | translate}}</th>
               <!-- <th scope="col">{{"postJob.location" | translate}}</th> -->
-              <th scope="col"> {{"tabs.jobDetails" | translate}}</th>
+              <th scope="col"> {{"shared.jobTitle" | translate}}</th>
               <th scope="col">{{"tabs.feedback" | translate}}</th>
               <!-- <th scope="col">{{"dashboard.action" | translate}}</th> -->
             </tr>
