--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-lg-4 col-md-4 matches-8">
         <div class="title">
-          <h2>{{"shared.matchings" | translate }}</h2>
+          <h2>{{"tabs.matches" | translate }}</h2>
         </div>
 		<div class="sidebar-widget text-left">
           <div class="card" *ngFor="let item of postedJobsMatchDetailsArray; let i=index">
