--- a/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
+++ b/frontend/src/app/modules/features/employer/job-detail-view/job-detail-view.component.html
@@ -178,7 +178,7 @@
 		</div>
         <div class="title mt-4" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role?.includes(1) && postedJobs?.length && postedJobs?.length !=1 && !postedJobs?.includes(postedJobsDetails?.id)">
           <h2>
-				{{"shared.otherPost" | translate}}        
+				{{"shared.otherposition" | translate}}        
             <!-- {{"dashboard.yourPostJobs" | translate }} -->
           </h2>
         </div>
