--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -103,7 +103,7 @@
 																</div>
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
-																	<p>{{items?.comments}}</p>
+																	<p *ngFor="let item of items?.comments; index as i; trackBy: trackByFn">{{item}}</p>
 																	
 																	<p  class="linksValue" (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
 																	<p  class="linksValue" (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
@@ -118,7 +118,7 @@
 																</div>
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
-																	<p>{{items?.comments}}</p>
+																	<p *ngFor="let item of items?.comments; index as i; trackBy: trackByFn">{{item}}</p>
 																	<p *ngIf="items?.link">You have received a meeting invitation on <span class="gre" >{{items?.date | date: 'longDate' }} </span> at <span class="gre" >{{items?.date | date: 'shortTime' }} </span> </p>
 																	<!--<p  class="linksValue"  (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
 																	<p  class="linksValue"  (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
@@ -140,7 +140,7 @@
 																</div>
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
-																	<p>{{items?.comments}}</p>
+																	<p *ngFor="let item of items?.comments; index as i; trackBy: trackByFn">{{item}}</p>
 																	
 																	<p class="linksValue"   (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
 																	<p class="linksValue"   (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true  && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
@@ -155,7 +155,7 @@
 																</div>
 																<div class="content">
 																	<h4>{{items?.status}}</h4>
-																	<p>{{items?.comments}}</p>
+																	<p *ngFor="let item of items?.comments; index as i; trackBy: trackByFn">{{item}}</p>
 																	<p class="linksValue"  (click)="openPopupViewInvite(item);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true && items?.invite_url.includes('calendly') == true" [href]="items?.invite_url">Schedule the timing</p>
 																	<p class="linksValue"  (click)="openPopupViewInviteNew(item,event);" *ngIf="items?.id == item?.status && items?.invite_url && item?.invite_status ==true && items?.invite_url.includes('calendly') == false" [href]="items?.invite_url">Schedule the timing</p>
 																</div>
