--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -9,7 +9,7 @@
 				</button> -->
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a (click)="onRedirectBack();" ><i class="fas fa-chevron-circle-left my-auto mr-1"></i></a></li>
-					<li class="breadcrumb-item active" aria-current="page">{{"shared.candidateMatches" | translate }}</li>
+					<li class="breadcrumb-item active" aria-current="page">{{"nav.matchingCandidates" | translate }}</li>
 				</ol>
 			</div>
 			<div class="col-lg-7 clearfix">
