job seeker Dshboard count showing section changes

--- a/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
+++ b/frontend/src/app/modules/features/user/user-chart/user-chart.component.html
@@ -322,6 +322,17 @@
 						</div>	
 					</div>
 					<div class="col-lg-3 col-md-4">
+						<div class="d-flex align-items-center pb-lg-0 pb-md-5">
+							<div class="icon-card purple d-flex align-items-center justify-content-center">
+							  <i class="bi bi-tags"></i>
+							</div>
+							<div class="info-card pl-3">
+								<h6>{{totalVisa}}</h6>
+								<span>{{"shared.byVisa" | translate}}</span>
+							</div>
+						</div>	
+					</div>
+					<div class="col-lg-3 col-md-4">
 						<div class="d-flex align-items-center pb-5">
 							<div class="icon-card yallow d-flex align-items-center justify-content-center">
 							  <i class="bi bi-file-earmark-check"></i>
@@ -330,7 +341,7 @@
 								<h6>{{totalApplied}}</h6>
 								<span>{{"nav.appliedJobs" | translate}}</span>
 							</div>
-						</div>	
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4">
 						<div class="d-flex align-items-center pb-5">
@@ -342,10 +353,10 @@
 						</svg>
 							</div>
 							<div class="info-card pl-3">
-								<h6>{{totalInterviewed}}</h6>
+								<h6>{{totalShortlisted}}</h6>
 								<span>{{"chart.interviewed" | translate}}</span>
 							</div>
-						</div>	
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4">
 						<div class="d-flex align-items-center pb-5">
@@ -353,21 +364,10 @@
 							  <i class="bi bi-hand-thumbs-up"></i>
 							</div>
 							<div class="info-card pl-3">
-								<h6>{{totalShortlisted}}</h6>
-								<span>{{"nav.shortlisted" | translate}}</span>
+								<h6>{{totalInterviewed}}</h6>
+								<span>{{"shared.hired" | translate}}</span>
 							</div>
-						</div>	
-					</div>
-					<div class="col-lg-3 col-md-4">
-						<div class="d-flex align-items-center pb-lg-0 pb-md-5">
-							<div class="icon-card purple d-flex align-items-center justify-content-center">
-							  <i class="bi bi-tags"></i>
-							</div>
-							<div class="info-card pl-3">
-								<h6>{{totalVisa}}</h6>
-								<span>{{"shared.byVisa" | translate}}</span>
-							</div>
-						</div>	
+						</div>
 					</div>
 					
 				</div>
