--- a/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
+++ b/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
@@ -361,8 +361,11 @@
 								  <th scope="col" class="text-center">{{"chart.awaiting" | translate}}</th>
 								</tr>
 							  </thead>
-							  <tbody *ngFor="let item of jobStatus">
-								<tr>
+							  <tbody >
+								<tr *ngIf="jobStatus ===0">
+									<td>No Jobs Found</td>
+								</tr>
+								<tr *ngFor="let item of jobStatus">
 								  <td><a class="text-capitalize" href="javascript:;" [routerLink]="['/employer/job-detail-view', 'details']" [queryParams]="{id: item?.id}" routerLinkActive="router-link-active" >{{item.title}} </a></td>
 								  <td class="text-center">
 									<a  [routerLink]="['/employer/dashboard']"
