--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-splash-screen></app-splash-screen>
 <router-outlet></router-outlet>
 <div style="position: relative">
   <!-- the position of the parent container must be set to relative -->
