--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -137,7 +137,7 @@
     <div class="col-lg-4">
       <div class=" form-group">
         <label>{{"userProfile.endToEnd" | translate }}</label>
-        <input numbersOnlys formControlName="end_to_end_implementation" type="text" class="form-control w-25">
+        <input numbersOnly formControlName="end_to_end_implementation" type="text" class="form-control w-25">
       </div>
     </div>
   </div>
