past data interview data pick

--- a/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
+++ b/frontend/src/app/modules/features/employer/employer-shortlisted-candidate/employer-shortlisted-candidate.component.html
@@ -337,7 +337,7 @@
 	 <form [formGroup]="meetingform" (ngSubmit)="sendmeetinglink()">
 	 <div class="form-group">
         <label>Interview Date</label>   
-          <input type="date" [min]="currentdata" class="form-control" formControlName="interviewDate" name="interviewDate">
+          <input type="date"  class="form-control" formControlName="interviewDate" name="interviewDate">
       </div>
 	  <div class="row">
 	   <div class="col-6 form-group">
