--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -661,6 +661,7 @@
 										(matChipInputTokenEnd)="add($event)">
 								</mat-chip-list>
 							</mat-form-field>
+							<span *ngIf="prefLocErr1" style="color:red">Select Valid Europian Country</span>
 						</div>	
 					</div>	
 			</div>
