--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -118,6 +118,7 @@
 							(matChipInputTokenEnd)="add($event)">
 					</mat-chip-list>
 				</mat-form-field>
+				<span *ngIf="prefLocErr" style="color:red">Select Valid Europian Country</span>
 			</div>	
 		</div>	
 		</div>	
