--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -147,7 +147,7 @@
 	<div class="col-lg-9 col-md-12" >	
 			<div class=" form-group">
 				<label >{{"userProfile.programmingSkills" | translate }}</label>
-		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
+		<!--<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>-->
 				<mat-form-field  class="example-chip-list" style="width: 100%;" >
 					
 					<mat-chip-list #chipList aria-label="programmingSkills">
@@ -172,7 +172,7 @@
 						</mat-option>
 					</mat-autocomplete>
 				</mat-form-field>
-				<app-control-messages [control]="f['programming_skills']"></app-control-messages>
+				<!--<app-control-messages [control]="f['programming_skills']"></app-control-messages>-->
 			</div>	
 		</div>	
     <!-- <div class="col-lg-9 col-md-6">
